[package]
name = "gitgone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.5.2"
reqwest = "0.11.10"
tokio = { version = "1.17.0", features = ["full"] }
